# OBJ-GSP

./: .gitignore  CMakeLists.txt  Configure.h  main.cpp  sam.ipynb
Feature/: ImageData.cpp  ImageData.h  MultiImage.cpp
Mesh/: MeshOptimization.cpp  MeshOptimization.h
Stitching/: NISwGSP_Stitching.cpp  Parameter.cpp  Parameter.h
Util/: EdgeDetection.cpp  RuntimeConfig.cpp  RuntimeConfig.h  Thin.cpp
assets/: README.md
docs/: README.md  phase1_depth_loss_current_results.md  phase1_depth_loss_plan.md
docs/plans/: StitchBench General 上复现 OBJ-GSP Ours 实验计划.md
tools/: assemble_depthpro_dsp_results.py  compare_stitchbench_methods.py  evaluate_stitchbench_ours.py  generate_depth_assets.py  generate_sam_assets.py  prepare_stitchbench_general.py  run_phase1_depth_loss.ps1  run_stitchbench_ours.ps1
weights/: README.md
